fix z-index for scroll button

--- a/css/main.css
+++ b/css/main.css
@@ -195,7 +195,7 @@ button:focus {
 	align-items: center;
 	padding: 0 40px;
     width: 60%;
-    z-index: 999;
+    z-index: 99999;
 }
 
 button:focus {
@@ -232,7 +232,7 @@ button.contain.open-menu {
 	visibility: hidden;
 	transition: opacity 0.35s, visibility 0.35s, height 0.35s;
 	overflow: auto;
-    z-index: 2;
+    z-index: 9999;
 }
 
 .overlay.open {
@@ -566,7 +566,7 @@ button.contain.open-menu {
         position: fixed;
         bottom: 20px;
         right: 20px;
-        z-index: 99999;
+        z-index: 999;
         outline: none;
         cursor: pointer;
         display: none;
